# hosted

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  lint.yml  mypy.yml  pre-commit.yml  setup.yml  test.yml
scripts/: accept_invitations  update-locales
wlhosted/: addons.py  dbrouter.py  settings_test.py
wlhosted/error/: weblate_503.html  weblate_50x.html
wlhosted/integrations/: forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
wlhosted/integrations/management/commands/: list_contacts.py  list_payments.py  migrate_payments.py  push_users.py
wlhosted/integrations/migrations/: 0001_fill_billing_customer_name.py  0002_usersyncstate.py
wlhosted/integrations/templates/hosted/: create.html
wlhosted/integrations/templates/mail/: billing_paid.html  billing_paid_subject.txt
wlhosted/legal/templatetags/: lawlinks.py
wlhosted/locale/: django.pot
wlhosted/locale/ab/LC_MESSAGES/: django.po
wlhosted/locale/ach/LC_MESSAGES/: django.po
wlhosted/locale/af/LC_MESSAGES/: django.po
wlhosted/locale/afh/LC_MESSAGES/: django.po
wlhosted/locale/ang/LC_MESSAGES/: django.po
wlhosted/locale/apc/LC_MESSAGES/: django.po
wlhosted/locale/ar/LC_MESSAGES/: django.po
wlhosted/locale/ar_LY/LC_MESSAGES/: django.po
wlhosted/locale/ars/LC_MESSAGES/: django.po
wlhosted/locale/arz/LC_MESSAGES/: django.po
wlhosted/locale/ast/LC_MESSAGES/: django.po
wlhosted/locale/awa/LC_MESSAGES/: django.po
wlhosted/locale/az/LC_MESSAGES/: django.po
wlhosted/locale/ba/LC_MESSAGES/: django.po
wlhosted/locale/bar/LC_MESSAGES/: django.po
wlhosted/locale/be/LC_MESSAGES/: django.po
wlhosted/locale/be@latin/LC_MESSAGES/: django.po
wlhosted/locale/be_Latn/LC_MESSAGES/: django.po
wlhosted/locale/ber/LC_MESSAGES/: django.po
wlhosted/locale/bg/LC_MESSAGES/: django.po
wlhosted/locale/bn/LC_MESSAGES/: django.po
wlhosted/locale/bn_BD/LC_MESSAGES/: django.po
wlhosted/locale/bnt/LC_MESSAGES/: django.po
wlhosted/locale/bo/LC_MESSAGES/: django.po
wlhosted/locale/br/LC_MESSAGES/: django.po
wlhosted/locale/ca/LC_MESSAGES/: django.po
wlhosted/locale/ce/LC_MESSAGES/: django.po
wlhosted/locale/chn/LC_MESSAGES/: django.po
wlhosted/locale/ckb/LC_MESSAGES/: django.po
wlhosted/locale/crh/LC_MESSAGES/: django.po
wlhosted/locale/cs/LC_MESSAGES/: django.po
wlhosted/locale/cv/LC_MESSAGES/: django.po
wlhosted/locale/cy/LC_MESSAGES/: django.po
wlhosted/locale/da/LC_MESSAGES/: django.po
wlhosted/locale/de/LC_MESSAGES/: django.po
wlhosted/locale/dv/LC_MESSAGES/: django.po
wlhosted/locale/el/LC_MESSAGES/: django.po
wlhosted/locale/en_GB/LC_MESSAGES/: django.po
wlhosted/locale/en_US/LC_MESSAGES/: django.po
wlhosted/locale/en_devel/LC_MESSAGES/: django.po
wlhosted/locale/enm/LC_MESSAGES/: django.po
wlhosted/locale/eo/LC_MESSAGES/: django.po
wlhosted/locale/es/LC_MESSAGES/: django.po
wlhosted/locale/es_419/LC_MESSAGES/: django.po
wlhosted/locale/et/LC_MESSAGES/: django.po
wlhosted/locale/eu/LC_MESSAGES/: django.po
wlhosted/locale/fa/LC_MESSAGES/: django.po
wlhosted/locale/fi/LC_MESSAGES/: django.po
wlhosted/locale/fil/LC_MESSAGES/: django.po
wlhosted/locale/fr/LC_MESSAGES/: django.po
wlhosted/locale/fur/LC_MESSAGES/: django.po
wlhosted/locale/fy/LC_MESSAGES/: django.po
wlhosted/locale/ga/LC_MESSAGES/: django.po
wlhosted/locale/gl/LC_MESSAGES/: django.po
wlhosted/locale/he/LC_MESSAGES/: django.po
wlhosted/locale/hi/LC_MESSAGES/: django.po
wlhosted/locale/hi_Latn/LC_MESSAGES/: django.po
wlhosted/locale/hr/LC_MESSAGES/: django.po
wlhosted/locale/hu/LC_MESSAGES/: django.po
wlhosted/locale/hy/LC_MESSAGES/: django.po
wlhosted/locale/ia/LC_MESSAGES/: django.po
wlhosted/locale/id/LC_MESSAGES/: django.po
wlhosted/locale/ie/LC_MESSAGES/: django.po
wlhosted/locale/ig/LC_MESSAGES/: django.po
wlhosted/locale/is/LC_MESSAGES/: django.po
wlhosted/locale/it/LC_MESSAGES/: django.po
wlhosted/locale/ja/LC_MESSAGES/: django.po
wlhosted/locale/ka/LC_MESSAGES/: django.po
wlhosted/locale/kab/LC_MESSAGES/: django.po
wlhosted/locale/kk/LC_MESSAGES/: django.po
wlhosted/locale/km/LC_MESSAGES/: django.po
wlhosted/locale/kmr/LC_MESSAGES/: django.po
wlhosted/locale/kn/LC_MESSAGES/: django.po
wlhosted/locale/ko/LC_MESSAGES/: django.po
wlhosted/locale/ksh/LC_MESSAGES/: django.po
wlhosted/locale/ku/LC_MESSAGES/: django.po
wlhosted/locale/kw/LC_MESSAGES/: django.po
wlhosted/locale/ln/LC_MESSAGES/: django.po
wlhosted/locale/lo/LC_MESSAGES/: django.po
wlhosted/locale/lt/LC_MESSAGES/: django.po
wlhosted/locale/lv/LC_MESSAGES/: django.po
wlhosted/locale/lzh/LC_MESSAGES/: django.po
wlhosted/locale/mg/LC_MESSAGES/: django.po
wlhosted/locale/mk/LC_MESSAGES/: django.po
wlhosted/locale/ml/LC_MESSAGES/: django.po
wlhosted/locale/mn/LC_MESSAGES/: django.po
wlhosted/payments/: admin.py  backends.py  forms.py  models.py  tests.py  validators.py
wlhosted/payments/migrations/: 0001_initial.py  0001_squashed_0024_rename_details_new_payment_details_and_more.py  0001_squashed_0031_alter_payment_uuid.py  0002_auto_20181024_1151.py  0008_auto_20181106_1622.py  0009_auto_20181113_2339.py  0010_auto_20181127_1307.py  0014_auto_20200316_1249.py  0015_payment_currency.py  0019_auto_20220915_1301.py  0025_alter_payment_uuid.py  0026_alter_customer_address_alter_customer_city_and_more.py  0027_customer_address_2_customer_postcode_and_more.py  0028_customer_created.py  0029_customer_end_client_customer_note.py  0030_customer_zammad_id.py  0031_alter_payment_uuid.py  0032_customer_upcoming_payment_notification_days.py  0033_alter_customer_created.py  0034_customer_vat_validated_customer_vat_validation_error_and_more.py  0035_fill_billing_customer_name.py  0036_alter_customer_vat_validation_state.py  0037_customer_accounting_reference_customer_contact_point.py  0038_customer_follow_up_at_customer_follow_up_note.py  0039_remove_customer_follow_up_at_and_more.py
(+59 files in other folders)
