[flake8]
max-complexity = 16
extend-select = E,W1,W2,W3,W504,W505,W6
enable-extensions = B,C,D,DJ,F,G,I,M,N,R,SF
# Should be fixed:
#  D10 - we are missing many docstrings
#  D20* - wrong docstring formatting
#  D40* - many strings need rephrasing
extend-ignore = D10,D200,D202,D204,D205,D209,D400,D401,DJ01,DJ02,T201
exclude = migrations,settings.py,settings_test.py,.git,data,data-test,settings_test_nose.py,docs,.venv,build,node_modules
max-line-length = 88

[metadata]
name = wlhosted
version = 0.1
author = Michal Čihař
author_email = michal@cihar.com
license = GPLv3+
description = Hosted Weblate Customization
url = https://weblate.org/
download_url = https://weblate.org/download/
long_description = file: README.rst
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[pycodestyle]
extend-select = E,W1,W2,W3,W504,W505,W6
exclude = migrations,settings.py,settings_test.py,.git,data,data-test,settings_test_nose.py,docs,.venv,build,node_modules
max-line-length = 88

[options]
packages = wlhosted
zip_safe = True
install_requires =
    Django>=4.2,<4.3
    django-appconf>=1.0
    django-countries==7.5.1
    django-vies==6.0.2
    fakturace==0.6.1
    fiobank==3.0.0
    nijel-thepay==0.5
    psycopg2-binary
    python-dateutil
    requests
    Weblate
include_package_data = True
python_requires = >=3.9
